Created papers and committees page

--- a/client/committies.html
+++ b/client/committies.html
@@ -101,23 +101,23 @@
     </div>
 </div>
    <div class="flex">
-    <div id="main1">
+    <div class="main">
       <p>
-        About UdM, Mauritius
-Université des Mascareignes (UdM) is the newest public university of the Republic of Mauritius set up in 2012 and aims to be the leading Higher Education Institution in the Indian Ocean. It has around 1100 local and international students and 60 academic staff distributed in three faculties:
-</p>
-<ul>
-  <li>Faculty of Sustainable Development and Engineering</li>
-  <li>Faculty of Business and Management</li>
-  <li>Faculty of Information and Communication Technology</li>
-</ul>
+        <div>
 
+        </div>
 
-<p>
-The UdM has three campuses across the country. UdM collaborates with Université de Limoges, France, to deliver double-degree awards. It follows the European Licence-Maîtrise- Doctorat (Bachelor, Masters, and PhD) higher education system. UdM works closely with the Mauritian industry with all UdM programs including a compulsory industrial internship component. Consequently, graduates of Université des Mascareignes have the unique potential of being highly employable and possess high skills to pursue further studies. In its endeavor to attain high academic standards, UdM collaborates with several international higher education institutions in research and academia.
-
-For more details: <a href="https://udm.ac.mu/">https://udm.ac.mu/</a>
-      </p>
+        <span>
+            <button class="btn btn-primary">
+                Technical Programme Committee
+            </button>
+            <button class="btn btn-primary">
+                Special Session 1 Committee
+            </button>
+            <button class="btn btn-primary">
+                Special Session 2 Committee             
+            </button>
+        </span>
 
 
 
@@ -125,7 +125,7 @@ For more details: <a href="https://udm.ac.mu/">https://udm.ac.mu/</a>
 
 
     </div>
-    <div id="section1">ther</div>
+    <div class="section">ther</div>
    </div>
 
 
