--- a/client/papers.html
+++ b/client/papers.html
@@ -101,7 +101,7 @@
     </div>
 </div>
    <div class="flex">
-    <div id="main1">
+    <div class="main">
       <p>ICACIE 2022 focuses on both theory and applications in the broad areas of advanced computing 
         and intelligent engineering. ICACIE is a multidisciplinary conference organized with the objective 
         of bringing together academicians, scientists, researchers from industry, research scholars, and 
@@ -120,8 +120,8 @@
       <table class="table">
         <thead>
           <tr>
-            <td>Advanced Computing</td>
-            <td>Intelligent Networking</td>
+            <th>Advanced Computing</th>
+            <th>Intelligent Networking</th>
           </tr>
         </thead>
         <tbody>
@@ -208,7 +208,7 @@
 
 
     </div>
-    <div id="section1">ther</div>
+    <div class="section">ther</div>
    </div>
 
 
