New css: button

--- a/client/index.html
+++ b/client/index.html
@@ -66,7 +66,7 @@
           <a class="nav-link" href="papers.html">CALL FOR PAPERS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="committies.html">COMMITTEES</a>
+          <a class="nav-link" href="committies.html">COMMITTIEES</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact.html">KEYNOTE/SPEAKERS</a>
@@ -84,10 +84,10 @@
           <a class="nav-link" href="sponsors.html">SPONSORS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="register.html">REGISTRATION</a>
+          <a class="nav-link" href="register.html">REGISTER</a>
         </li>
         <li class="nav-item">
-          <a class="btn btn-primary" href="login.html">SIGN IN</a>
+          <a class="nav-link" href="login.html">SIGN IN</a>
         </li>
       </ul>
     </div>
@@ -97,7 +97,7 @@
 
 <div class="container">
     <div class="container-fluid">
-    <button id="myBtn" class="btn btn-secondary">Open a Modal</button>
+    <button  class="btn btn-animation">Open a Modal</button>
     </div>
 </div>
    <div class="flex">
