--- a/client/papers.html
+++ b/client/papers.html
@@ -201,14 +201,22 @@
         </tbody>
       </table>
       <br>
-      <button class="btn btn-primary">Download Call for Papers in PDF Format</button>
+      <button class="btn btn-animation">Download Call for Papers in PDF Format</button>
 
 
 
 
 
     </div>
-    <div class="section">ther</div>
+    <div class="section">
+      <div class="days-box">
+        <p>Days to conference: <br>
+          <h1>25</h1><br>
+        </p>
+      </div>
+
+
+    </div>
    </div>
 
 
