--- a/client/committies.html
+++ b/client/committies.html
@@ -108,13 +108,13 @@
         </div>
 
         <span>
-            <button class="btn btn-primary">
+            <button class="btn btn-animation">
                 Technical Programme Committee
             </button>
-            <button class="btn btn-primary">
+            <button class="btn btn-animation">
                 Special Session 1 Committee
             </button>
-            <button class="btn btn-primary">
+            <button class="btn btn-animation">
                 Special Session 2 Committee             
             </button>
         </span>
