Venue page & improvements

--- a/client/contact.html
+++ b/client/contact.html
@@ -96,9 +96,20 @@
    </nav>
 
    <main>
+    <div class="flex" >
+      <div class="main">
+        <p class="subtitle">For enquiries concerning publications and papers:</p>
+        <p>email@udm.ac.mu</p>
+        <p class="subtitle">For enquiries concerning publications and papers:</p>
+        <p>email@udm.ac.mu</p>
+        <p class="subtitle">For enquiries concerning publications and papers:</p>
+        <p>email@udm.ac.mu</p>
+      </div>
+
+      <hr>
+    </div>
     <h2 class="flex">Fill in the form to contact us!</h2>
         <div class="form-contact flex">
-            
             <form action="" id="contact-form">
             
                 <div class="input">
