--- a/client/index.html
+++ b/client/index.html
@@ -69,7 +69,7 @@
           <a class="nav-link" href="committies.html">COMMITTIEES</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">KEYNOTE/SPEAKERS</a>
+          <a class="nav-link" href="speakers.html">KEYNOTE/SPEAKERS</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="venue.html">VENUE</a>
