--- a/client/papers.html
+++ b/client/papers.html
@@ -95,11 +95,7 @@
 
 
 
-<div class="container">
-    <div class="container-fluid">
-    <button id="myBtn" class="btn btn-secondary">Open a Modal</button>
-    </div>
-</div>
+
    <div class="flex">
     <div class="main">
       <p>ICACIE 2022 focuses on both theory and applications in the broad areas of advanced computing 
@@ -209,7 +205,16 @@
 
     </div>
     <div class="section">
-      <div class="days-box">
+      <div class="section-box">
+        <p>Days to conference:</p>
+        <p>Although preference will be given to full papers, abstracts of 200-500 words will also be considered. All papers and abstracts should be sent by 30th June 2022 by email to davideacrowther@aol.com.
+
+          No more than 2 papers will be accepted from any author.
+          
+          Final version of the accepted papers will be required by 10th of August 2022.</p>
+      </div>
+
+      <div class="section-box">
         <p>Days to conference: <br>
           <h1>25</h1><br>
         </p>
