--- a/client/venue.html
+++ b/client/venue.html
@@ -94,22 +94,19 @@
 </nav>
 
 
+<div class="flex">
+  <img src="udm-campus.jpg" alt="Picture of university" style="width: 100%;">
+  <div class="main">
 
-<div class="container">
-    <div class="container-fluid">
-    <button id="myBtn" class="btn btn-secondary">Open a Modal</button>
-    </div>
-</div>
-   <div class="flex">
-    <div id="main1">
-      <p>
-        About UdM, Mauritius
+
+    <p>
+      About UdM, Mauritius
 Université des Mascareignes (UdM) is the newest public university of the Republic of Mauritius set up in 2012 and aims to be the leading Higher Education Institution in the Indian Ocean. It has around 1100 local and international students and 60 academic staff distributed in three faculties:
 </p>
 <ul>
-  <li>Faculty of Sustainable Development and Engineering</li>
-  <li>Faculty of Business and Management</li>
-  <li>Faculty of Information and Communication Technology</li>
+<li>Faculty of Sustainable Development and Engineering</li>
+<li>Faculty of Business and Management</li>
+<li>Faculty of Information and Communication Technology</li>
 </ul>
 
 
@@ -117,48 +114,26 @@ Université des Mascareignes (UdM) is the newest public university of the Republ
 The UdM has three campuses across the country. UdM collaborates with Université de Limoges, France, to deliver double-degree awards. It follows the European Licence-Maîtrise- Doctorat (Bachelor, Masters, and PhD) higher education system. UdM works closely with the Mauritian industry with all UdM programs including a compulsory industrial internship component. Consequently, graduates of Université des Mascareignes have the unique potential of being highly employable and possess high skills to pursue further studies. In its endeavor to attain high academic standards, UdM collaborates with several international higher education institutions in research and academia.
 
 For more details: <a href="https://udm.ac.mu/">https://udm.ac.mu/</a>
-      </p>
+    </p>
 
-
-
-
-
-
+  </div>
+  <div class="section">
+    <div class="section-box">
+      <h2>Accommodation</h2>
+      <p>Where to stay in this beautiful country!?</p>
+      <a href="accommodation.html">Click here to find out</a>
     </div>
-    <div id="section1">ther</div>
-   </div>
+    <div class="section-box">      
+      <h2>Sightseeing</h2>
+      <p>Where to do during you stay!?</p>
+      <a href="sightseeing.html">Click here to find out</a></div>
+    <div class="section-box">
+      <h2>Travel</h2>
+      <p>How to travel to Mauritius?</p>
+      <a href="travel.html">Click here to find out</a>
+    </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  </div>
 
 <hr>  
 <footer >
