--- a/client/committies.html
+++ b/client/committies.html
@@ -55,43 +55,44 @@
 
     </div>
 
-<nav class="navbar ">
-     <div class="" id="">
-      <ul class="nav-list">
-       
-        <li class="nav-item">
-          <a class="nav-link active" href="index.html">HOME</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="papers.html">CALL FOR PAPERS</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="committies.html">COMMITTEES</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">KEYNOTE/SPEAKERS</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="venue.html">VENUE</a>
-        </li> 
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">CONTACT</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="gallery.html">GALLERY</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="sponsors.html">SPONSORS</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="register.html">REGISTRATION</a>
-        </li>
-        <li class="nav-item">
-          <a class="btn btn-primary" href="login.html">SIGN IN</a>
-        </li>
-      </ul>
-    </div>
-</nav>
+
+    <nav class="navbar ">
+      <div >
+       <ul class="nav-list">
+        
+         <li class="nav-item">
+           <a class="nav-link active" href="index.html">HOME</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="papers.html">CALL FOR PAPERS</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="committies.html">COMMITTIEES</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="speakers.html">KEYNOTE/SPEAKERS</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="venue.html">VENUE</a>
+         </li> 
+         <li class="nav-item">
+           <a class="nav-link" href="contact.html">CONTACT</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="gallery.html">GALLERY</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="sponsors.html">SPONSORS</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="register.html">REGISTER</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="login.html">SIGN IN</a>
+         </li>
+       </ul>
+     </div>
+ </nav>
 
 
 
