--- a/client/index.html
+++ b/client/index.html
@@ -56,7 +56,7 @@
     </div>
 
 <nav class="navbar ">
-     <div class="" id="">
+     <div >
       <ul class="nav-list">
        
         <li class="nav-item">
