--- a/client/contact.html
+++ b/client/contact.html
@@ -100,9 +100,9 @@
       <div class="main">
         <p class="subtitle">For enquiries concerning publications and papers:</p>
         <p>email@udm.ac.mu</p>
-        <p class="subtitle">For enquiries concerning publications and papers:</p>
+        <p class="subtitle">For general enquiries:</p>
         <p>email@udm.ac.mu</p>
-        <p class="subtitle">For enquiries concerning publications and papers:</p>
+        <p class="subtitle">For any other query:</p>
         <p>email@udm.ac.mu</p>
       </div>
 
