--- a/client/index.html
+++ b/client/index.html
@@ -119,13 +119,16 @@ The UdM has three campuses across the country. UdM collaborates with Université
 For more details: <a href="https://udm.ac.mu/">https://udm.ac.mu/</a>
       </p>
 
-
-
-
-
-
     </div>
-    <div class="section">ther</div>
+    <div class="section">
+      <div class="section-box section-box-image">
+        <div class="transparent-box">
+          <h2>Days to conference:</h2>
+          <p>25</p>
+          
+        </div>
+      </div>
+    </div>
    </div>
 
 
