--- a/client/sightseeing.html
+++ b/client/sightseeing.html
@@ -63,73 +63,91 @@
        </div>
    </nav>
 
-   <div class=" flex gallery gallery-small">
-     
-      <div>
-        <p>Le Morne Brabant Mountain</p>
-        <img src="img/m1.jpg" alt="">
-      </div>
-      <div>
-        <p>Le Morne Brabant Mountain</p>
-        <img src="img/m2.jpg" alt="">
-      </div>
-      <div>
-        <p>Le Morne Brabant Mountain</p>
-        <img src="img/m3.jpg" alt="">
-      </div>
-      <div>
-        <p>Le Morne Brabant Mountain</p>
-        <img src="img/m4.jpg" alt="">
-      </div>
-      <div>
-        <p>Le Morne Brabant Mountain</p>
-        <img src="img/m5.jpg" alt="">
-      </div>      
-      <div>
-        <p>Le Morne Brabant Mountain</p>
-        <img src="img/m6.jpg" alt="">
-      </div>
-      <div>
-        <p>Le Morne Brabant Mountain</p>
-        <img src="img/m7.jpg" alt="">
-      </div>
-      <div>
-        <p>Le Morne Brabant Mountain</p>
-        <img src="img/m8.jpg" alt="">
-      </div>
-    </div>
-
-
-
-
-
-
-
-
  
 
+<style>
 
 
 
 
+.gallery li:hover .overlay {
+  transform: scale(1);
+}
+
+.overlay {
+  position: absolute;
+  width: 100%;
+  height:100%;
+  background: rgba(57, 57, 57, 0.502);
+  top: 0;
+  left: 0;
+  transform: scale(0);
+  transition: all 0.2s 0.1s ease-in-out;
+  color: #fff;
+  border-radius: 5px;
+  /* center overlay text */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+</style>
 
 
+   <div class=" flex gallery gallery-small ">
+     
+    <div class="image-box">
+      <img src="img/m1.jpg" alt="Image Of Mauritius">
+      <span class="image-text">
+        Le Morne Beach
+      </span>
+      <span class="image-text">
+        This is lkdsflfkla o  lhliH Vlis ahfl lhadflhialdfh la fh hfkhab afh sajhfbH FYABD
+      </span>
+    </div>
+    <div class="image-box">
+      <img src="img/m2.jpg" alt="Image Of Mauritius">
+      <span class="image-text">
+        Flic En Flac Beach
+    </span>
+  </div>
+    <div class="image-box">
+      <img src="img/m3.jpg" alt="Image Of Mauritius">
+      <span class="image-text">
+        Chamarelle Waterfalls
+    </span>
+  </div>
+    <div class="image-box">
+      <img src="img/m4.jpg" alt="Image Of Mauritius">
+      <span class="image-text">
+        Beautiful sea to swim in
+    </span>
+  </div>
+    <div class="image-box">
+      <img src="img/m5.jpg" alt="Image Of Mauritius">
+      <span class="image-text">
+        Sunset at Flic en Flac
+    </span>
+  </div>
+    <div class="image-box">
+      <img src="img/m6.jpg" alt="Image Of Mauritius">
+      <span class="image-text">
+        Stunning photos to take
+    </span>
+  </div>
+    <div class="image-box">
+      <img src="img/m7.jpg" alt="Image Of Mauritius">
+      <span class="image-text">
+        Scenery from a helicopter
+    </span>
+  </div>
+    <div class="image-box">
+      <img src="img/m8.jpg" alt="Image Of Mauritius">
+      <span class="image-text">
+        Take a trip to the surounding island
+    </span>
+  </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    </div>
 
 <hr>  
 <footer >
