--- a/client/sponsors.html
+++ b/client/sponsors.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Committies</title>
+    <title>Sponsors</title>
 </head>
 <body>
 <div id="body-item">
+
   <div class=" flex " id="header-intro">
     <div class="a">
         <img src="logo.png" alt="University of Mascareign logo">
@@ -57,65 +58,6 @@
   </ul>
 </div>
 </nav>
-
-   <div class="flex">
-    <div class="main">
-        <span>
-            <button class="btn btn-animation">
-                Technical Programme Committee
-            </button>
-            <button class="btn btn-animation">
-                Special Session 1 Committee
-            </button>
-            <button class="btn btn-animation">
-                Special Session 2 Committee             
-            </button>
-        </span>
-
-    </div>
-    <div class="section">
-      <div class="section-box section-box-image">
-        <div class="transparent-box">
-          <h2>Days to conference:</h2>
-          <p>25</p>
-        </div>
-      </div>
-      <div class="section-box section-box-image">
-        <div class="transparent-box">
-          <h2>Payement:</h2>
-          <p>Payment deadline extended to 31 August 2022!</p>
-        </div>
-      </div>
-      <div class="section-box section-box-image">
-        <div class="transparent-box">
-          <h2>Submission of papers:</h2>
-          <p>Submissions still open.</p>
-        </div>
-      </div>
-      <div class="section-box section-box-image" >
-        <div class="transparent-box">
-        <h2>Accommodation</h2>
-        <p>Where to stay in this beautiful country!?</p>
-        <a href="accommodation.html">Click here to find out</a>
-      </div>
-      </div>
-      <div class="section-box section-box-image">   
-        <div class="transparent-box"> 
-        <h2>Sightseeing</h2>
-        <p>Where to do during you stay!?</p>
-        <a href="sightseeing.html">Click here to find out</a>
-      </div>
-      </div>
-      <div class="section-box section-box-image">
-        <div class="transparent-box">
-        <h2>Travel</h2>
-        <p>How to travel to Mauritius?</p>
-        <a href="travel.html">Click here to find out</a>
-      </div>
-      </div>
-    </div>
-   </div>
-
 <hr>  
 <footer>
   <div id="footer" class="flex">
