--- a/client/gallery.html
+++ b/client/gallery.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS only -->
-
-<link rel="stylesheet" href="style.css">
-
-    <title>Sightseeing</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Gallery</title>
 </head>
 <body>
 <div id="body-item">
+
   <div class=" flex " id="header-intro">
     <div class="a">
         <img src="logo.png" alt="University of Mascareign logo">
@@ -22,45 +20,64 @@
     <div class="a">
         <img src="logo.png" alt="University of Mascareign logo">
     </div>
-</div>
-
-<nav class="navbar">
- <div>
-  <ul class="nav-list flex">
-    <li class="nav-item">
-      <a class="nav-link active" href="index.html">HOME</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="papers.html">CALL FOR PAPERS</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="committies.html">COMMITTIEES</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="speakers.html">KEYNOTE/SPEAKERS</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="venue.html">VENUE</a>
-    </li> 
-    <li class="nav-item">
-      <a class="nav-link" href="contact.html">CONTACT</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="gallery.html">GALLERY</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="sponsors.html">SPONSORS</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="register.html">REGISTER</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="login.html">SIGN IN</a>
-    </li>
-  </ul>
-</div>
-</nav>
+  </div>
+  
+      <nav class="navbar">
+        <div>
+         <ul class="nav-list flex">
+           <li class="nav-item">
+             <a class="nav-link active" href="index.html">HOME</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link" href="papers.html">CALL FOR PAPERS</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link" href="committies.html">COMMITTIEES</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link" href="speakers.html">KEYNOTE/SPEAKERS</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link" href="venue.html">VENUE</a>
+           </li> 
+           <li class="nav-item">
+             <a class="nav-link" href="contact.html">CONTACT</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link" href="gallery.html">GALLERY</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link" href="sponsors.html">SPONSORS</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link" href="register.html">REGISTER</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link" href="login.html">SIGN IN</a>
+           </li>
+         </ul>
+       </div>
+   </nav>
+   <div class="flex">
+     <p class="subtitle">A few photos of Mauritius</p>
+   </div>
    <div class=" flex gallery gallery-small ">
+    <div class="image-box">
+      <img src="img/hotel2.jpg" alt="Image Of Mauritius">
+    </div>
+    <div class="image-box">
+      <img src="img/hotel3.jpg" alt="Image Of Mauritius">
+    </div>
+    <div class="image-box">
+      <img src="img/hotel4.jpg" alt="Image Of Mauritius">
+    </div>
+    <div class="image-box">
+      <img src="img/hotel5.jpg" alt="Image Of Mauritius">
+    </div>
+    <div class="image-box">
+      <img src="img/hotel6.jpg" alt="Image Of Mauritius">
+    </div>
+ 
     <div class="image-box">
       <img src="img/m1.jpg" alt="Image Of Mauritius">
       <span class="image-text">
@@ -101,15 +118,17 @@
       <img src="img/m7.jpg" alt="Image Of Mauritius">
       <span class="image-text">
         Scenery from a helicopter
-      </span>
+    </span>
   </div>
     <div class="image-box">
       <img src="img/m8.jpg" alt="Image Of Mauritius">
       <span class="image-text">
         Take a trip to the surounding island
     </span>
-    </div>
   </div>
+
+    </div>
+
 <hr>  
 <footer>
   <div id="footer" class="flex">
